fix: fix select color in dark mode

--- a/src/components/FiltersContainer/filtersContainer.scss
+++ b/src/components/FiltersContainer/filtersContainer.scss
@@ -37,6 +37,8 @@
   color: $baby-blue;
   input,
   input:focus,
+  select,
+  select:focus,
   input:-webkit-autofill,
   input:-webkit-autofill:focus {
     @include dark-inputs;
